Add padding at Submit button to fix appearance
- At i-phones the bottom line of the screen was covering some portion of the button

--- a/BolWallet/Pages/EcryptedCitizenshipPage.razor
+++ b/BolWallet/Pages/EcryptedCitizenshipPage.razor
@@ -161,7 +161,7 @@
                     </MudCard>
                 }
             </MudCardContent>
-            <MudCardActions >
+            <MudCardActions Style="padding-bottom: 20px;">
                 <MudItem Style="text-align: center;" xs="12">
                     <MudButton ButtonType="MudBlazor.ButtonType.Submit"
                                Variant="MudBlazor.Variant.Filled"
