Change navigation to download certification documents

--- a/BolWallet/Pages/GenerateWalletWithPasswordPage.razor
+++ b/BolWallet/Pages/GenerateWalletWithPasswordPage.razor
@@ -1,7 +1,6 @@
 ﻿@page "/generate-wallet-with-password"
 
 @inherits MvvmComponentBase<GenerateWalletWithPasswordViewModel>
-@inject INavigationService NavigationService
 
 <MudThemeProvider/>
 
@@ -47,6 +46,6 @@
 
         await InvokeAsync(() => StateHasChanged());
 
-        await NavigationService.NavigateTo<MainWithAccountViewModel>(true);
+        await App.Current.MainPage.Navigation.PushAsync(new Views.DownloadCertificationDocumentsPage());
     }
 }
