Fix a bug where international NIN name was not set

--- a/BolWallet/Pages/EcryptedCitizenshipPage.razor
+++ b/BolWallet/Pages/EcryptedCitizenshipPage.razor
@@ -215,6 +215,7 @@
         {
             await ViewModel.OnInitializeAsync();
             form = ViewModel.CitizenshipForm;
+            ViewModel.SetNinInternationalNameCommand.Execute(null);
         }
         catch (Exception e)
         {
