--- a/BolWallet/Pages/CreateCodenameCompanyPage.razor
+++ b/BolWallet/Pages/CreateCodenameCompanyPage.razor
@@ -76,7 +76,14 @@
                     }
                     else
                     {
-                        <MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Primary" OnClick="@(()=> createCodenameCompanyViewModel.SubmitCommand.Execute(null))">Submit</MudButton>
+                        @if (ViewModel.AlternativeCodenames.Contains(ViewModel.Codename))
+                        {
+                            <MudAlert Severity="Severity.Error">@(string.Join(Environment.NewLine, ViewModel.AlternativeCodenames))</MudAlert>
+                        }
+                        else
+                        {
+                            <MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Primary" OnClick="@(() => createCodenameCompanyViewModel.SubmitCommand.Execute(null))">Submit</MudButton>
+                        }
                     }
                 }
             </div>
