--- a/BolWallet/Views/DownloadCertificationDocumentsPage.xaml
+++ b/BolWallet/Views/DownloadCertificationDocumentsPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BolWallet.Views.DownloadCertificationDocumentsPage"
-             Title="Certification Documents"
+             Title="Bol Documents"
              xmlns:pages="clr-namespace:BolWallet.Pages">
 
     <BlazorWebView x:Name="blazorWebView" HostPage="wwwroot/index.html">
